// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArticleChart snapshots > matches snapshot for area 1`] = `
<figure
  class="my-6 rounded-xl border border-border bg-card p-4 sm:p-5 not-prose "
  data-nn-chart="true"
>
  <figcaption
    class="mb-3"
  >
    <h3
      class="font-headline text-lg sm:text-xl font-semibold text-headline leading-tight"
    >
      Akkumulert vekst
    </h3>
  </figcaption>
  <div
    class="w-full"
  >
    <div
      data-testid="responsive-container"
      style="width: 600px; height: 320px;"
    />
  </div>
  <div
    class="mt-3 flex items-center justify-between gap-3 pt-3 border-t border-border/60"
  >
    <div
      class="flex items-center gap-2"
    >
      <img
        alt="Nær Næring"
        class="w-5 h-5 object-contain dark:bg-white dark:rounded-full dark:p-0.5"
        height="20"
        src="logo.png"
        width="20"
      />
      <span
        class="font-headline text-xs font-semibold text-foreground/80"
      >
        Nær Næring
      </span>
    </div>
    <span
      class="text-xs text-muted-foreground font-body italic"
    >
      Kilde: SSB (2024)
    </span>
  </div>
</figure>
`;

exports[`ArticleChart snapshots > matches snapshot for bar 1`] = `
<figure
  class="my-6 rounded-xl border border-border bg-card p-4 sm:p-5 not-prose "
  data-nn-chart="true"
>
  <figcaption
    class="mb-3"
  >
    <h3
      class="font-headline text-lg sm:text-xl font-semibold text-headline leading-tight"
    >
      Omsetning per region
    </h3>
    <p
      class="mt-1 text-sm text-muted-foreground font-body"
    >
      Millioner kroner
    </p>
  </figcaption>
  <div
    class="w-full"
  >
    <div
      data-testid="responsive-container"
      style="width: 600px; height: 320px;"
    />
  </div>
  <div
    class="mt-3 flex items-center justify-between gap-3 pt-3 border-t border-border/60"
  >
    <div
      class="flex items-center gap-2"
    >
      <img
        alt="Nær Næring"
        class="w-5 h-5 object-contain dark:bg-white dark:rounded-full dark:p-0.5"
        height="20"
        src="logo.png"
        width="20"
      />
      <span
        class="font-headline text-xs font-semibold text-foreground/80"
      >
        Nær Næring
      </span>
    </div>
    <span
      class="text-xs text-muted-foreground font-body italic"
    >
      Kilde: SSB (2024)
    </span>
  </div>
</figure>
`;

exports[`ArticleChart snapshots > matches snapshot for horizontalBar 1`] = `
<figure
  class="my-6 rounded-xl border border-border bg-card p-4 sm:p-5 not-prose "
  data-nn-chart="true"
>
  <figcaption
    class="mb-3"
  >
    <h3
      class="font-headline text-lg sm:text-xl font-semibold text-headline leading-tight"
    >
      Topp 5 selskaper
    </h3>
  </figcaption>
  <div
    class="w-full"
  >
    <div
      data-testid="responsive-container"
      style="width: 600px; height: 320px;"
    />
  </div>
  <div
    class="mt-3 flex items-center justify-between gap-3 pt-3 border-t border-border/60"
  >
    <div
      class="flex items-center gap-2"
    >
      <img
        alt="Nær Næring"
        class="w-5 h-5 object-contain dark:bg-white dark:rounded-full dark:p-0.5"
        height="20"
        src="logo.png"
        width="20"
      />
      <span
        class="font-headline text-xs font-semibold text-foreground/80"
      >
        Nær Næring
      </span>
    </div>
    <span
      class="text-xs text-muted-foreground font-body italic"
    >
      Kilde: SSB (2024)
    </span>
  </div>
</figure>
`;

exports[`ArticleChart snapshots > matches snapshot for line 1`] = `
<figure
  class="my-6 rounded-xl border border-border bg-card p-4 sm:p-5 not-prose "
  data-nn-chart="true"
>
  <figcaption
    class="mb-3"
  >
    <h3
      class="font-headline text-lg sm:text-xl font-semibold text-headline leading-tight"
    >
      Vekst over tid
    </h3>
  </figcaption>
  <div
    class="w-full"
  >
    <div
      data-testid="responsive-container"
      style="width: 600px; height: 320px;"
    />
  </div>
  <div
    class="mt-3 flex items-center justify-between gap-3 pt-3 border-t border-border/60"
  >
    <div
      class="flex items-center gap-2"
    >
      <img
        alt="Nær Næring"
        class="w-5 h-5 object-contain dark:bg-white dark:rounded-full dark:p-0.5"
        height="20"
        src="logo.png"
        width="20"
      />
      <span
        class="font-headline text-xs font-semibold text-foreground/80"
      >
        Nær Næring
      </span>
    </div>
    <span
      class="text-xs text-muted-foreground font-body italic"
    >
      Kilde: SSB (2024)
    </span>
  </div>
</figure>
`;

exports[`ArticleChart snapshots > matches snapshot for pie 1`] = `
<figure
  class="my-6 rounded-xl border border-border bg-card p-4 sm:p-5 not-prose "
  data-nn-chart="true"
>
  <figcaption
    class="mb-3"
  >
    <h3
      class="font-headline text-lg sm:text-xl font-semibold text-headline leading-tight"
    >
      Markedsandeler
    </h3>
  </figcaption>
  <div
    class="w-full"
  >
    <div
      data-testid="responsive-container"
      style="width: 600px; height: 320px;"
    />
  </div>
  <div
    class="mt-3 flex items-center justify-between gap-3 pt-3 border-t border-border/60"
  >
    <div
      class="flex items-center gap-2"
    >
      <img
        alt="Nær Næring"
        class="w-5 h-5 object-contain dark:bg-white dark:rounded-full dark:p-0.5"
        height="20"
        src="logo.png"
        width="20"
      />
      <span
        class="font-headline text-xs font-semibold text-foreground/80"
      >
        Nær Næring
      </span>
    </div>
    <span
      class="text-xs text-muted-foreground font-body italic"
    >
      Kilde: SSB (2024)
    </span>
  </div>
</figure>
`;

exports[`ArticleChart snapshots > matches snapshot for scatter 1`] = `
<figure
  class="my-6 rounded-xl border border-border bg-card p-4 sm:p-5 not-prose "
  data-nn-chart="true"
>
  <figcaption
    class="mb-3"
  >
    <h3
      class="font-headline text-lg sm:text-xl font-semibold text-headline leading-tight"
    >
      Ansatte vs omsetning
    </h3>
  </figcaption>
  <div
    class="w-full"
  >
    <div
      data-testid="responsive-container"
      style="width: 600px; height: 320px;"
    />
  </div>
  <div
    class="mt-3 flex items-center justify-between gap-3 pt-3 border-t border-border/60"
  >
    <div
      class="flex items-center gap-2"
    >
      <img
        alt="Nær Næring"
        class="w-5 h-5 object-contain dark:bg-white dark:rounded-full dark:p-0.5"
        height="20"
        src="logo.png"
        width="20"
      />
      <span
        class="font-headline text-xs font-semibold text-foreground/80"
      >
        Nær Næring
      </span>
    </div>
    <span
      class="text-xs text-muted-foreground font-body italic"
    >
      Kilde: SSB (2024)
    </span>
  </div>
</figure>
`;

exports[`ArticleChart snapshots > matches snapshot for stackedBar 1`] = `
<figure
  class="my-6 rounded-xl border border-border bg-card p-4 sm:p-5 not-prose "
  data-nn-chart="true"
>
  <figcaption
    class="mb-3"
  >
    <h3
      class="font-headline text-lg sm:text-xl font-semibold text-headline leading-tight"
    >
      Sammensatt omsetning
    </h3>
  </figcaption>
  <div
    class="w-full"
  >
    <div
      data-testid="responsive-container"
      style="width: 600px; height: 320px;"
    />
  </div>
  <div
    class="mt-3 flex items-center justify-between gap-3 pt-3 border-t border-border/60"
  >
    <div
      class="flex items-center gap-2"
    >
      <img
        alt="Nær Næring"
        class="w-5 h-5 object-contain dark:bg-white dark:rounded-full dark:p-0.5"
        height="20"
        src="logo.png"
        width="20"
      />
      <span
        class="font-headline text-xs font-semibold text-foreground/80"
      >
        Nær Næring
      </span>
    </div>
    <span
      class="text-xs text-muted-foreground font-body italic"
    >
      Kilde: SSB (2024)
    </span>
  </div>
</figure>
`;
